--- a/lib/libyomu/dune
+++ b/lib/libyomu/dune
@@ -1,4 +1,4 @@
 (library
  (name libyomu)
  ; (modules ccallback app comic error)
- (libraries util xdg cmdliner camlzip dune-build-info))
+ (libraries util cbindings xdg cmdliner camlzip dune-build-info))
