--- a/oyomu.opam
+++ b/oyomu.opam
@@ -5,8 +5,8 @@ maintainer: ["EruEri"]
 authors: ["EruEri"]
 license: "GPL-3.0"
 tags: ["topics" "to describe" "your" "project"]
-homepage: "https://github.com/EruEri/yomu"
-bug-reports: "https://github.com/EruEri/yomu/issues"
+homepage: "https://github.com/EruEri/oyomu"
+bug-reports: "https://github.com/EruEri/oyomu/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.2"}
@@ -29,4 +29,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/EruEri/yomu.git"
+dev-repo: "git+https://github.com/EruEri/oyomu.git"
