--- a/lib/commandline/dune
+++ b/lib/commandline/dune
@@ -1,3 +1,3 @@
 (library
  (name commandline)
- (libraries cmdliner xdg libyomu util cbindings))
+ (libraries cmdliner xdg libyomu util cbindings cmdcommon cmdcollection))
