[CHANGELOG + MAN]: decrypt man

--- a/man/dune
+++ b/man/dune
@@ -86,3 +86,13 @@
 (install
  (section man)
  (files oyomu-collection-read.1))
+
+(rule
+ (with-stdout-to
+  oyomu-collection-decrypt.1
+  (run %{bin:oyomu} collection decrypt --help=groff)))
+
+(install
+ (section man)
+ (files oyomu-collection-decrypt.1))
+
