--- a/man/dune
+++ b/man/dune
@@ -95,3 +95,12 @@
 (install
  (section man)
  (files oyomu-collection-decrypt.1))
+
+(rule
+ (with-stdout-to
+  oyomu-collection-rename.1
+  (run %{bin:oyomu} collection rename --help=groff)))
+
+(install
+ (section man)
+ (files oyomu-collection-rename.1))
