--- a/oyomu.opam
+++ b/oyomu.opam
@@ -14,6 +14,7 @@ depends: [
   "dune-build-info"
   "xdg"
   "ocaml" {>= "4.13.0"}
+  "cryptokit" {>= "1.17"}
   "camlzip" {>= "1.11"}
   "ppx_deriving_yojson" {>= "3.5.3"}
   "yojson" {>= "2.0.0"}
