--- a/oyomu.opam
+++ b/oyomu.opam
@@ -4,7 +4,7 @@ version: "0.3.0-1"
 synopsis: "A command line comic reader and collection manager"
 maintainer: ["EruEri"]
 authors: ["EruEri"]
-license: "GPL-3.0"
+license: "GPL-3.0-or-later"
 tags: ["comics-reader" "comics-collection" "commandline"]
 homepage: "https://github.com/EruEri/oyomu"
 bug-reports: "https://github.com/EruEri/oyomu/issues"
@@ -13,7 +13,7 @@ depends: [
   "dune-configurator"
   "dune-build-info"
   "xdg"
-  "ocaml" {>= "4.13.0"}
+  "ocaml" {>= "4.14.0"}
   "cryptokit" {>= "1.17"}
   "camlzip" {>= "1.11"}
   "ppx_deriving_yojson" {>= "3.5.3"}
